force-app/main/default/objects/SurveyBuilder__c/SurveyBuilder__c.object-meta.xml
<CustomObject>
    <label>Survey Builder</label>
    <nameField>
        <displayFormat>SB-{0000000000}</displayFormat>
        <label>SurveyBuilder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Builder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>