force-app/main/default/objects/SurveyBuilder__c/fields/Adjustor_Name__c.field-meta.xml
<CustomField>
    <fullName>Adjustor_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjustor name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>