force-app/main/default/objects/SurveyBuilder__c/fields/Claim_LOB__c.field-meta.xml
<CustomField>
    <fullName>Claim_LOB__c</fullName>
    <label>Claim lob</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUC</fullName>
                <label>Commercial Auto</label>
            </value>
            <value>
                <fullName>EB</fullName>
                <label>Commercial Property</label>
            </value>
            <value>
                <fullName>AUP</fullName>
                <label>Personal Auto</label>
            </value>
            <value>
                <fullName>RE</fullName>
                <label>Personal Property</label>
            </value>
            <value>
                <fullName>SPY</fullName>
                <label>Specialty Lines</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>