force-app/main/default/objects/SurveyBuilder__c/fields/ClaimForRole__c.field-meta.xml
<CustomField>
    <fullName>ClaimForRole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim for role SF Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>