force-app/main/default/objects/SurveyBuilder__c/fields/ClaimNumber__c.field-meta.xml
<CustomField>
    <fullName>ClaimNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Claim number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>