force-app/main/default/objects/SurveyBuilder__c/fields/ExposureForRole__c.field-meta.xml
<CustomField>
    <fullName>ExposureForRole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exposure for role SF Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>