force-app/main/default/objects/SurveyBuilder__c/fields/LiabilityConfirmed__c.field-meta.xml
<CustomField>
    <fullName>LiabilityConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liability confirmed</label>
    <type>Checkbox</type>
</CustomField>