force-app/main/default/objects/SurveyBuilder__c/fields/Party_Address_Line__c.field-meta.xml
<CustomField>
    <fullName>Party_Address_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party address line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>