force-app/main/default/objects/SurveyBuilder__c/fields/Party_City__c.field-meta.xml
<CustomField>
    <fullName>Party_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>