force-app/main/default/objects/SurveyBuilder__c/fields/Party_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Party_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party postal code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>