force-app/main/default/objects/SurveyBuilder__c/fields/PartyContact__c.field-meta.xml
<CustomField>
    <fullName>PartyContact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party contact SF Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>