force-app/main/default/objects/SurveyBuilder__c/fields/PIG_EN__c.field-meta.xml
<CustomField>
    <fullName>PIG_EN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PIG EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>