force-app/main/default/objects/SurveyBuilder__c/fields/PIG_FR__c.field-meta.xml
<CustomField>
    <fullName>PIG_FR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PIG FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>