force-app/main/default/objects/SurveyBuilder__c/fields/PIG_Logo_EN__c.field-meta.xml
<CustomField>
    <fullName>PIG_Logo_EN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PIG Logo EN</label>
    <type>Url</type>
</CustomField>