force-app/main/default/objects/SurveyBuilder__c/fields/ProvinceOfIssuanceId__c.field-meta.xml
<CustomField>
    <fullName>ProvinceOfIssuanceId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Province of issuance Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>