force-app/main/default/objects/SurveyBuilder__c/fields/RoleId__c.field-meta.xml
<CustomField>
    <fullName>RoleId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>