force-app/main/default/objects/SurveyBuilder__c/fields/Survey_Url__c.field-meta.xml
<CustomField>
    <fullName>Survey_Url__c</fullName>
    <formula>$Setup.Pulse_Survey_Configuration__c.Base_Url__c &amp; &apos;?c_id=&apos;&amp; ClaimForRole__c &amp; &apos;&amp;e_id=&apos;&amp; ExposureForRole__c &amp; &apos;&amp;time=&apos; &amp; TEXT( ROUND((now() - DATETIMEVALUE( &quot;2020-01-01 12:00:00&quot; )) * 24 * 60 * 60, 0 ) ) &amp; $Setup.Pulse_Survey_Configuration__c.Timestamp_Anchor__c &amp; &apos;&amp;pig_en=&apos; &amp; PIG_Logo_EN__c &amp; &apos;&amp;pig_fr=&apos; &amp; PIG_Logo_FR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey url</label>
    <type>Text</type>
</CustomField>