force-app/main/default/objects/SurveyBuilder__c/fields/SurveyLink__c.field-meta.xml
<CustomField>
    <fullName>SurveyLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey link</label>
    <type>Url</type>
</CustomField>